# SETR

./: README.md  dailytemp.c  main.cpp
p3/Examples/_40_Unity_UnitTest/: CMakeLists.txt
p3/Examples/_40_Unity_UnitTest/src/: MyVectorLib.c  MyVectorLib.h
p3/Examples/_40_Unity_UnitTest/test/: CMakeLists.txt  testMyVectorLib.c
p4/Entrega2/: CMakeLists.txt  Doxyfile  Makefile  main  main.c  makefile  testcmdproc
p4/Entrega2/html/: annotated.html  bug.html  classes.html  cmdproc_8c.html  cmdproc_8c__incl.dot  cmdproc_8h.html  cmdproc_8h__dep__incl.dot  cmdproc_8h_source.html  dir_000001_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_defs_p.html  globals_defs_r.html  globals_defs_t.html  globals_defs_u.html  globals_enum.html  globals_eval.html  globals_func.html  globals_i.html  globals_p.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  globals_v.html  globals_vars.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.dot  menudata.js  pages.html  structUNITY__STORAGE__T-members.html  (+13 more)
p4/Entrega2/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  (+18 more)
p4/Entrega2/src/: CMakeLists.txt  cmdproc.c  cmdproc.h  main.c
p4/Entrega2/test/: CMakeLists.txt  teste.c  testecmdproc.c
(+85 files in other folders)
